--- a/CharlieTheUnicorn/app/src/main/res/values/strings.xml
+++ b/CharlieTheUnicorn/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CharlieTheUnicorn</string>
     <string name="action_settings">Settings</string>
+    <string name="app_title">The Adventures of\nCharlie The Unicorn</string>
+    <string name="start_button">Start Game</string>
 </resources>
