--- a/CharlieTheUnicornComicStrip/app/src/main/res/values/strings.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CharlieTheUnicornComicStrip</string>
     <string name="action_settings">Settings</string>
+    <string name="game_title">Charlie Comics</string>
 </resources>
