--- a/CharlieTheUnicornComicStrip/app/src/main/res/values/strings.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">CharlieTheUnicornComicStrip</string>
     <string name="action_settings">Settings</string>
     <string name="game_title">Charlie Comics</string>
+    <string name="start_new">New</string>
+    <string name="save">Save</string>
+    <string name="background">Set Background</string>
+    <string name="shape">Add Shape</string>
+    <string name="colors">Pick Color</string>
+    <string name="size">Set Size</string>
+    <string name="erase">Erase</string>
 </resources>
