added share and save buttons logic

--- a/CharlieTheUnicornComicStrip/app/src/main/res/values/strings.xml
+++ b/CharlieTheUnicornComicStrip/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="size">Set Size</string>
     <string name="erase">Erase</string>
 
+    <string name="facebook_app_id">1790473374513466</string>
+
 </resources>
